# dukememory

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  TRADEMARKS.md
src/: app.rs  build_info.rs  http_api.rs  main.rs  runtime_config.rs  services.rs  storage.rs
src/app/: autonomous.rs  cli.rs  db.rs  diagnostics.rs  embeddings.rs  explain.rs  generation.rs  graph_rag.rs  http_server.rs  maintenance.rs  mcp_server.rs  memory.rs  memory_ui.html  model.rs  observability.rs  onboard.rs  ops.rs  project.rs  release_ops.rs  retrieval.rs  shared.rs  topology.rs
tests/: cli.rs
