[package]
name = "dukememory"
version = "0.14.14"
edition = "2024"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1.12"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rhai = { version = "1.22", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
toml = "0.8"
uuid = { version = "1.11", features = ["v4"] }

[features]
default = []
vec = []

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.13"
