[package]
name = "dukememory"
version = "0.14.143"
edition = "2024"
license = "Apache-2.0"
description = "Local project memory for AI coding agents: durable context, SQLite, MCP, Codex skill, embeddings, and autonomous maintenance."
repository = "https://github.com/danilkryachko/dukememory"
readme = "README.md"
keywords = ["ai-agent", "memory", "mcp", "sqlite", "embeddings"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1.12"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rhai = { version = "1.22", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
toml = "0.8"
uuid = { version = "1.11", features = ["v4"] }

[features]
default = []
vec = []

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.13"
